# gladus

./: CMakeLists.txt  LICENSE  README.md
gladus/: binding.hpp  buffer.hpp  error.hpp  framebuffer.hpp  opengl.hpp  program.hpp  shader.hpp  state.hpp  texture.hpp
tests/: compilation.cpp
